# fastzpi_zero

./: .coverage  .coverage.CIMED-KADU.pid14472.XcNYLcCx  .coverage.CIMED-KADU.pid18784.XTqnULDx  .gitignore  pyproject.toml
fastzpi_zero/: app.py
tests/: conftest.py  test_app.py
